<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/btn_copro"
        android:layout_alignStart="@+id/btn_copro"
        android:layout_marginTop="58dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_copro"
        android:id="@+id/btn_copro"
        android:layout_marginTop="84dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_depenses"
        android:id="@+id/btn_depenses"
        android:layout_below="@+id/btn_copro"
        android:layout_marginTop="56dp"
        android:layout_alignRight="@+id/btn_copro"
        android:layout_alignEnd="@+id/btn_copro"
        android:layout_alignLeft="@+id/btn_copro"
        android:layout_alignStart="@+id/btn_copro" />

</RelativeLayout>
